# misc

./: CMakeLists.txt  README.md  README.org  test.csv
R/: r_test.ipynb  transformations.R  transformations_automatic.stan  transformations_manual.stan  transformations_wrong.stan
benchmarks/: CMakeLists.txt  eigen.cpp  eigen_blaze.cpp  eigen_ops.cpp  pow.cpp
cuda/: CMakeLists.txt  add_cpu_openmp.cpp  add_cpu_openmp.hpp  add_cpu_serial.cpp  add_cpu_serial.hpp  add_cuda.cu  add_cuda.hpp  add_thrust.cu  add_thrust.hpp  benchmark.cpp  device_matrix.cpp  device_matrix.hpp  device_vector.cpp  device_vector.hpp
cv/: cv.tex
explore/: CMakeLists.txt  async.cpp  avx.cpp  bad_pointer.cpp  factor.cpp  fmt.cpp  match.cpp  sample.cpp  spdlog.cpp
json/: CMakeLists.txt  nlohmann.cpp
python/: CMakeLists.txt  adjoint.py  decotator.py  fib.py  futures.py  hello_boost_python.cpp  hello_boost_python.py  row_col_sums.py  scatter_nd.py  sparse.py
pytorch/: CMakeLists.txt  example-app.cpp  rosenbrock.py
